force-app/main/default/objects/ConferenceSession__c.object
<CustomObject>
    <fields>
        <fullName>Attendees__c</fullName>
        <description>Capture SpringFive, Client, and/or Partner attendees to the sessions</description>
        <inlineHelpText>SpringFive, Client, and/or Partner attendees.</inlineHelpText>
        <label>Attendee(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conference</label>
        <referenceTo>Conference__c</referenceTo>
        <relationshipLabel>Conference Sessions</relationshipLabel>
        <relationshipName>ConferenceSessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KeyTakeaways__c</fullName>
        <label>Key Takeaways</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SessionDescription__c</fullName>
        <description>Short Description of the Session.</description>
        <label>Session Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SessionEndDateTime__c</fullName>
        <description>End Date and Time of the Session.</description>
        <label>Session End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SessionStartDateTime__c</fullName>
        <description>Start Date and Time of the Session.</description>
        <label>Session Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Speakers__c</fullName>
        <label>Speakers</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Conference Session</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Conference__c</columns>
        <columns>SessionStartDateTime__c</columns>
        <columns>Attendees__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Conference Session Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conference Sessions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>